--- a/button-chaserV1/style.css
+++ b/button-chaserV1/style.css
@@ -4,12 +4,12 @@ body {
     height: 100%;
 }
 
-.container {
+.body__container {
     margin: 0px;
     height: 100%;
 }
 
-.button-class {
+.body__container__button-class {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -17,15 +17,10 @@ body {
     width: 80px;
 }
 
-.button-class button {
+.body__container__button-class__button {
     background-color: lightblue;
     position: absolute;
     height: inherit;
     width: inherit;
     margin: 0px;
-}
-
-p {
-    position: relative;
-    top: 50px;
 }
