--- a/button-chaserV2/style.css
+++ b/button-chaserV2/style.css
@@ -8,7 +8,7 @@ html, body {
   height: 100%;
 }
 
-.body__button-class {
+.body__button-container {
   position: absolute;
   top: 50%;
   left: 50%;
